--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -28,13 +28,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contacts">Contacts</a>
+                <a class="nav-link" href="contacts">Contacts</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="services" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,6 +55,41 @@
           </div>
         </div>
       </nav>
+
+
+      <section class="bg-black text-white d-flex flex-column justify-content-center align-items-center" id="explore">
+          <div class="d-flex justify-content-end align-items-center">
+                 <span class="px-2 text-white">
+                       See More
+                 </span>
+          </div>
+          <div class="col-sm-11 d-flex justify-content-center align-items-center">
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+             <div class="col-sm-2">
+              1
+             </div>
+          </div>
+      </section>
 
 
 </body>
