--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -58,11 +58,9 @@
 
 
       <section class="bg-black text-white d-flex flex-column justify-content-center align-items-center" id="explore">
-          <div class="d-flex justify-content-end align-items-center">
-                 <span class="px-2 text-white">
-                       See More
-                 </span>
-          </div>
+          <span class="d-flex align-items-center justify-content-end px-3 py-2" style="width: 100vw;">
+           <a href="#" class="text-decoration-none text-white h5">See more</a>
+          </span>
           <div class="col-sm-11 d-flex justify-content-center align-items-center">
              <div class="col-sm-2">
               1
