csv to json conversion

--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -61,34 +61,18 @@
           <span class="d-flex align-items-center justify-content-end px-3 py-2" style="width: 100vw;">
            <a href="#" class="text-decoration-none text-white h5">See more</a>
           </span>
-          <div class="col-sm-11 d-flex justify-content-center align-items-center">
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
-             <div class="col-sm-2">
-              1
-             </div>
+          <div class="col-sm-12 d-flex justify-content-center align-items-center">
+               <div class="icon left">
+                  <i class="fa fa-left"></i>
+               </div>
+               <div class="content"></div>
+               <div class="icon left"></div>
+
           </div>
       </section>
 
 
+
+      <script src="index.js"></script>
 </body>
 </html>
