--- a/App1/templates/style.css
+++ b/App1/templates/style.css
@@ -2,4 +2,13 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+}
+
+body {
+  max-width: 100vh;
+  overflow: hidden;
+  background-color: rgb(80, 80, 80);
+}
+body #explore {
+  min-height: 35vh;
 }/*# sourceMappingURL=style.css.map */
