--- a/App1/templates/style.scss
+++ b/App1/templates/style.scss
@@ -6,4 +6,8 @@
 body{
     max-width: 100vh;
     overflow: hidden;
+    background-color: rgb(80, 80, 80);
+    #explore{
+        min-height: 35vh;
+    }
 }
