--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TvShows</title>
+    <!-- FontAwesome cdn link   -->
+    <script src="https://kit.fontawesome.com/8dc03a4776.js" crossorigin="anonymous"></script>
+
     <!--  bootstrap import -->
             <!-- Latest compiled and minified CSS -->
              <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -58,15 +61,22 @@
 
 
       <section class="bg-black text-white d-flex flex-column justify-content-center align-items-center" id="explore">
+           <div class="d-flex text-white bg-black py-2 h3">
+               Explore Latest Movies , WebSeries And Animes
+           </div>
           <span class="d-flex align-items-center justify-content-end px-3 py-2" style="width: 100vw;">
            <a href="#" class="text-decoration-none text-white h5">See more</a>
           </span>
-          <div class="col-sm-12 d-flex justify-content-center align-items-center">
+          <div class="col-sm-12 d-flex justify-content-center align-items-center bg-danger" id="Slider">
                <div class="icon left">
-                  <i class="fa fa-left"></i>
+                  <i class="fa fa-caret-left"></i>
                </div>
-               <div class="content"></div>
-               <div class="icon left"></div>
+               <div class="content">
+                        ok
+               </div>
+               <div class="icon right">
+                <i class="fa fa-caret-right"></i>
+               </div>
 
           </div>
       </section>
