--- a/App1/templates/style.css
+++ b/App1/templates/style.css
@@ -11,4 +11,13 @@ body {
 }
 body #explore {
   min-height: 35vh;
+}
+body #explore #Slider {
+  max-height: 35vh;
+}
+body #explore #Slider .left, body #explore #Slider .right {
+  padding: 2rem;
+}
+body #explore #Slider .content {
+  min-width: 90vw;
 }/*# sourceMappingURL=style.css.map */
