--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -15,7 +15,26 @@
              <!-- Latest compiled JavaScript -->
              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- google fonts  -->
+    <!-- scss import  -->
+    <!-- <link rel="stylesheet" href="style.css">
+     -->
+     <style>
+          .left-icon,.right-icon{
+            cursor : pointer;
+          }
+          .left-icon:hover{
+            transition: all 0.3s ease-in-out;
+            background-color: rgba(255,255,255,0.3);
+          }
+          .right-icon:hover{
+            transition: all 0.3s ease-in-out;
+            background-color: rgba(255,255,255,0.3);
+          }
+     </style>
+     <!--  Jquery -->
+     <script src=
+     "https://code.jquery.com/jquery-3.5.1.js">
+      </script>
 </head>
 <body>
     <!--  navbar  -->
@@ -64,24 +83,60 @@
            <div class="d-flex text-white bg-black py-2 h3">
                Explore Latest Movies , WebSeries And Animes
            </div>
-          <span class="d-flex align-items-center justify-content-end px-3 py-2" style="width: 100vw;">
-           <a href="#" class="text-decoration-none text-white h5">See more</a>
+           <hr style="width : 100vw;border:1px solid rgb(156, 156, 156);">
+          <span class="d-flex align-items-center justify-content-end px-3 py-1" style="width: 100vw;">
+           <a href="#" class="text-decoration-none text-white py-1">
+            <i class="fa fa-plus-square"></i>
+            See more
+          </a>
           </span>
-          <div class="col-sm-12 d-flex justify-content-center align-items-center bg-danger" id="Slider">
-               <div class="icon left">
-                  <i class="fa fa-caret-left"></i>
+          <div class="col-sm-12 d-flex justify-content-center align-items-center bg-dark py-4" id="Slider" style="height: 35vh;">
+               <div class="icon left-icon px-4 py-5 border border-1 border-white text-info rounded-end rounded">
+                  <i class="fa fa-caret-left" style="font-size: 25px;"></i>
                </div>
-               <div class="content">
-                        ok
+               <div class="content px-3 d-flex align-items-center justify-content-center bg-danger" style="width:90vw;">
+
+                        <div class="col-sm-12 bg-warning">
+                             <div class="movie1 movie">
+                                  
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                             <div class="movie1 movie">
+
+                              
+                             </div>
+                        </div>
                </div>
-               <div class="icon right">
-                <i class="fa fa-caret-right"></i>
+               <div class="icon right-icon px-4 py-5 border border-1 border-white text-info rounded-start rounded-2">
+                <i class="fa fa-caret-right" style="font-size: 35px;"></i>
                </div>
 
           </div>
       </section>
-
-
 
       <script src="index.js"></script>
 </body>
