deleted some files

--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 
 {% block title %}Home{% endblock title %}
@@ -24,11 +25,12 @@
       <div class="content px-3 d-flex align-items-center justify-content-center bg-danger" style="width:90vw;">
 
                <div class="col-sm-12 bg-warning d-flex justify-content-center align-items-center" id="CardCont">
-                    
+                   {% comment %} {%for i in %} {% endcomment %}
+                
                </div>
       </div>
       <div class="icon right-icon px-4 py-5 border border-1 border-white text-info rounded-start rounded-2">
-       <i class="fa fa-caret-right" style="font-size: 35px;"></i>
+       <i class="fa fa-caret-right" style="font-size: 25px;"></i>
       </div>
 
  </div>
